--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/bep/hugo-starter-tailwind-basic.git"
-	},
+	"private": true,
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.14",
+		"flowbite": "^1.8.1",
 		"postcss": "^8.4.23",
 		"postcss-cli": "^10.1.0",
-		"tailwindcss": "^3.3.2"
+		"tailwindcss": "^3.3.2",
+		"webpack": "^5.89.0",
+		"webpack-cli": "^5.1.4"
 	},
-	"name": "hugo-starter-tailwind-basic",
-	"version": "0.1.0"
+	"scripts": {
+		"build-js": "npx webpack"
+	}
 }
