--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
 publish = "public"
-command = "npm run build-js && hugo --gc --minify -d public"
+command = "npm run build"
 
 [context.production.environment]
 HUGO_VERSION = "0.112.0"
