--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
 	"private": true,
 	"devDependencies": {
+		"@babel/core": "^7.23.2",
+		"@babel/preset-env": "^7.23.2",
 		"@tailwindcss/typography": "^0.5.9",
 		"autoprefixer": "^10.4.14",
+		"babel-loader": "^9.1.3",
 		"flowbite": "^1.8.1",
+		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.23",
 		"postcss-cli": "^10.1.0",
 		"tailwindcss": "^3.3.2",
@@ -11,6 +15,11 @@
 		"webpack-cli": "^5.1.4"
 	},
 	"scripts": {
-		"build-js": "npx webpack"
+		"build": "NODE_ENV=production && HUGO_ENV=production && run-s build:js build:hugo",
+		"build:hugo": "hugo --gc --minify -d public",
+		"build:js": "webpack --mode=production",
+    "start": "NODE_ENV=development run-p start:*",
+    "start:hugo": "hugo server --disableFastRender",
+    "start:webpack": "webpack --mode=development --watch"
 	}
 }
