--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.centrocilindri.it"
+baseURL = "https://www.centrocilindri.it/"
 
 disableKinds = ["section", "taxonomy", "term"]
 
